@@ -209,8 +209,6 @@ sub SpawnWaitKill ($)
         $result = $self->WaitKill ($timeout);
     }
 
-    $self->remove_executable ();
-
     return $result;
 }
 
@@ -247,28 +245,6 @@ sub IgnoreHostRoot
     }
 
     return $self->{IGNOREHOSTROOT};
-}
-
-sub remove_executable ()
-{
-  my $self = shift;
-  my $silent;
-
-  if (!defined $ENV{'ACE_TEST_VERBOSE'}) {
-    $silent = "2> /dev/null"
-  }
-
-  my $fsroot_target = $ENV{'ANDROID_FS_ROOT'};
-  my $program = $self->Executable ();
-  my $test = basename ($program);
-  my $adb_process = $ENV{'ANDROID_SDK_ROOT'} . "/platform-tools/adb";
-
-  my $cmd = $adb_process . ' shell rm ' . $fsroot_target . "/" . $test . " " . $silent;
-
-  if (defined $ENV{'ACE_TEST_VERBOSE'}) {
-      print STDERR "Start to execute : $cmd\n";
-  }
-  system ( $cmd );
 }
 
 sub Spawn ()
