@@ -1,3 +1,8 @@
+Tue Sep 13 08:12:40 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * bin/PerlACE/ProcessAndroid.pm:
+          Don't delete executable after each run
+
 Mon Sep 12 12:55:58 UTC 2011  Marcel Smit  <msmit@remedy.nl>
 
         * ACE-INSTALL.html:
